--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="./public/MovieRanking.html">This</a> <a>is a link to my Birthday party invite project</a>
     <p></p>
     <img 
+    class="fit-picture"
     height="300"
     src="./assets/images/Movie.png"
     alt="A screenshot of my webpage">
